haciendo el producto CRUD
